language/move-lang/tests/move_check/translated_ir_tests/commands/if_moves_no_else.exp
error: 

   ┌── tests/move_check/translated_ir_tests/commands/if_moves_no_else.move:4:17 ───
   │
 7 │     0x0::Transaction::assert(x == 0, 42);
   │                              ^ Invalid usage of local 'x'
   ·
 4 │         let y = move x;
   │                 ------ The local might not have a value due to this position. The local must be assigned a value before being used
   │

