language/move-lang/tests/move_check/translated_ir_tests/commands/if_moves_no_else.move
fun main() {
    let x = 0;
    if (true) {
        let y = move x;
        y;
    };
    0x0::Transaction::assert(x == 0, 42);
}

// check: COPYLOC_UNAVAILABLE_ERROR
